# fiber

./: .gitignore  README.md  docker-compose.yml  hug  pyproject.toml
.github/workflows/: pythonapp.yml
client/: package-lock.json  package.json  utils.js
client/public/: index.html
client/src/: App.css  App.jsx  actions.js  models.js
client/src/components/: Badge.jsx  Container.jsx  EventTable.jsx  MessageDrawer.jsx  MessageTable.jsx  TaskTable.jsx  styles.task-table.css
docker/: app.Dockerfile  fiber.Dockerfile  worker.Dockerfile
docker/example/: Dockerfile
docker/fiber/: Dockerfile
docker/worker/: Dockerfile
example/: app.py  models.py  requirements.txt  tasks.py  worker.py
example/public/: index.html
fiber/: README.txt  app.py  events.py  requirements.txt  setup.py
fiber/api/: websockets.py
fiber/fiber/: api.py  app.py  core.py  engine.py  events.py  server.py  store.py  utils.py
fiber/public/: index.html
